--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,18 @@
                 <artifactId>grpc-api</artifactId>
                 <version>${grpc.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20231013</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.6</version>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
