--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <commons.math3.version>3.6</commons.math3.version>
         <commons.configuration2.version>2.11.0</commons.configuration2.version>
         <commons.beanutils>1.9.4</commons.beanutils>
-        <commons.logging.version>1.5</commons.logging.version>
+        <commons.logging.version>1.2</commons.logging.version>
         <logging.log4j.version>2.13.0</logging.log4j.version>
         <testng.version>6.14.3</testng.version>
     </properties>
@@ -88,7 +88,7 @@
 
             <!-- logs -->
             <dependency>
-                <groupId>org.apache.commons</groupId>
+                <groupId>commons-logging</groupId>
                 <artifactId>commons-logging</artifactId>
                 <version>${commons.logging.version}</version>
             </dependency>
