--- a/SG-Core/pom.xml
+++ b/SG-Core/pom.xml
@@ -41,9 +41,15 @@
         </dependency>
 
         <!-- logs -->
+        <!-- logs -->
         <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
         </dependency>
 
         <dependency>
