--- a/SG-Core/pom.xml
+++ b/SG-Core/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>caffeine</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
         <!-- logs -->
         <!-- logs -->
         <dependency>
