--- a/SG-Core/src/main/resources/DefaultConfiguration.properties
+++ b/SG-Core/src/main/resources/DefaultConfiguration.properties
@@ -1,5 +1,6 @@
 MAX_SUBQUERY_RECURSION_DEPTH = 3
 MAX_EXPRESSION_RECURSION_DEPTH = 3
+MAX_CASTING_RECURSION_DEPTH = 3
 MAX_SETOP_RECURSION_DEPTH = 3
 
 CONVERT_TO_PARTITION_PROB = 10
