--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ maven-deploy:
   stage: maven-deploy
   script:
     - mvn clean install org.apache.maven.plugins:maven-deploy-plugin:2.8:deploy -DskipTests
+    - mvn deploy -s ci_settings.xml -DskipTests
   rules:
     - if: '$CI_PIPELINE_SOURCE != "pipeline"'
 
