--- a/pom.xml
+++ b/pom.xml
@@ -179,7 +179,7 @@
         </repository>
         <repository>
             <id>gitlab-maven</id>
-            <url>$env{CI_API_V4_URL}/projects/$env{CI_PROJECT_ID}/packages/maven</url>
+            <url>http://code.suan-chang.com/projects/238/packages/maven</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -209,11 +209,11 @@
     <distributionManagement>
         <repository>
             <id>gitlab-maven</id>
-            <url>$env{CI_API_V4_URL}/projects/$env{CI_PROJECT_ID}/packages/maven</url>
+            <url>http://code.suan-chang.com/projects/238/packages/maven</url>
         </repository>
         <snapshotRepository>
             <id>gitlab-maven</id>
-            <url>$$env{CI_API_V4_URL}/projects/$env{CI_PROJECT_ID}/packages/maven</url>
+            <url>http://code.suan-chang.com/projects/238/packages/maven</url>
         </snapshotRepository>
     </distributionManagement>
 
