--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,10 +15,9 @@ maven-deploy:
   stage: maven-deploy
   script:
     - mvn clean install org.apache.maven.plugins:maven-deploy-plugin:2.8:deploy -DskipTests
-    - 'curl --header "PRIVATE-TOKEN: 2o-4T-YywsKnu6--3xVw" \
-      --upload-file SG-Core/target/${PKG_NAME} \
-      "https://code.suan-chang.com/api/v4/projects/${CI_PROJECT_ID}/packages/generic/${CI_PROJECT_NAME}/${CI_COMMIT_SHA}/${PKG_NAME}?status=default"
-    '
+    - 'curl --header "PRIVATE-TOKEN: 2o-4T-YywsKnu6--3xVw" 
+      --upload-file SG-Core/target/${PKG_NAME} 
+      "https://code.suan-chang.com/api/v4/projects/238/packages/generic/SQLGenerator/${CI_COMMIT_SHA}/${PKG_NAME}?status=default"'
   rules:
     - if: '$CI_PIPELINE_SOURCE != "pipeline"'
 
