--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,8 @@ maven-deploy:
   script:
     - mvn clean install org.apache.maven.plugins:maven-deploy-plugin:2.8:deploy -DskipTests
     - 'curl --header "PRIVATE-TOKEN: 2o-4T-YywsKnu6--3xVw" 
-      --upload-file SG-Core/target/${PKG_NAME} 
-      "https://code.suan-chang.com/api/v4/projects/238/packages/generic/SQLGenerator/snapshot/${PKG_NAME}?status=default"'
+      --upload-file SG-Core/target/SQLGeneratorCore.jar
+      "https://code.suan-chang.com/api/v4/projects/238/packages/generic/SQLGenerator/snapshot/SQLGeneratorCore.jar"'
   rules:
     - if: '$CI_PIPELINE_SOURCE != "pipeline"'
 
