--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,10 @@ maven-deploy:
   stage: maven-deploy
   script:
     - mvn clean install org.apache.maven.plugins:maven-deploy-plugin:2.8:deploy -DskipTests
-    - 'curl --header "PRIVATE-TOKEN: ${CI_JOB_TOKEN}"  --header "Content-Type: multipart/form-data" 
+    - echo ${CI_JOB_TOKEN}
+    - echo ${CI_API_V4_URL}
+    - echo ${CI_PROJECT_ID}
+    - 'curl --header "PRIVATE-TOKEN: ${CI_JOB_TOKEN}"  --header "Content-Type: application/octet-stream" 
       --upload-file SG-Core/target/${PKG_NAME}
       "${CI_API_V4_URL}/api/v4/projects/${CI_PROJECT_ID}/packages/generic/SQLGenerator/0.0.1/${PKG_NAME}?status=default&select=package_file"'
   rules:
