fix: spark unsupported with nature join && fix: nested aggregation && fix: wrong type when predicate scalar with scalar

--- a/SG-Core/pom.xml
+++ b/SG-Core/pom.xml
@@ -82,7 +82,21 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
+            <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_${test.inegration.spark.scala.version}</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_${test.inegration.spark.scala.version}</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
