--- a/SG-Core/pom.xml
+++ b/SG-Core/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>SG-Core</artifactId>
+    <artifactId>SQLGenerator-Core</artifactId>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
