--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <maven.compile.plugin.version>3.8.1</maven.compile.plugin.version>
         <maven.install.plugin.version>3.1.1</maven.install.plugin.version>
         <maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
+        <maven.shade.plugin.version>3.2.4</maven.shade.plugin.version>
 
         <grpc.version>1.29.0</grpc.version>
         <protobuf.version>3.11.0</protobuf.version>
@@ -207,6 +208,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-install-plugin</artifactId>
                     <version>${maven.deploy.plugin.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>${maven.shade.plugin.version}</version>
                 </plugin>
 
             </plugins>
