--- a/SG-Client/pom.xml
+++ b/SG-Client/pom.xml
@@ -6,8 +6,7 @@
     <parent>
         <groupId>org.lee</groupId>
         <artifactId>SQLGenerator</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>SG-Client</artifactId>
@@ -27,8 +26,8 @@
 
         <dependency>
             <groupId>org.lee</groupId>
-            <artifactId>SG-Protos</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>SQLGenerator-Protos</artifactId>
+            <version>${revision}</version>
         </dependency>
 
     </dependencies>
