--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.lee</groupId>
         <artifactId>SQLGenerator</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>SQLGenerator-Core</artifactId>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.lee</groupId>
             <artifactId>SQLGenerator-Common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${revision}</version>
             <scope>compile</scope>
         </dependency>
 
