feat: support related conditions && reduce qualfication generator complex && fix: the problem (SQLContext might be null) initialized insert statement

--- a/server/src/main/resources/server.properties
+++ b/server/src/main/resources/server.properties
@@ -1,2 +1,6 @@
-HOST = 0.0.0.0
-PORT = 9090
+server.host = 0.0.0.0
+server.port = 9090
+
+server.context.cache.size = 200
+server.context.cache.expire = 30
+server.context.cache.timeunit = minutes
