--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <maven.install.plugin.version>3.1.1</maven.install.plugin.version>
         <maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
         <maven.shade.plugin.version>3.2.4</maven.shade.plugin.version>
+        <maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
+        <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
 
         <grpc.version>1.29.0</grpc.version>
         <protobuf.version>3.11.0</protobuf.version>
@@ -59,6 +61,12 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.lee</groupId>
+                <artifactId>SQLGenerator-Common</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <scope>compile</scope>
+            </dependency>
 
             <!-- grpc -->
             <dependency>
@@ -228,6 +236,17 @@
                     <version>${maven.shade.plugin.version}</version>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.apace.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>${maven.assembly.plugin.version}</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${maven.jar.plugin.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
